--- a/package.json
+++ b/package.json
@@ -1,10 +1,13 @@
 {
-  "name": "oc-modal-library",
+  "name": "@timout13/oc-modal-library",
   "version": "1.0.0",
   "description": "Made with create-react-library",
   "author": "timout13",
   "license": "MIT",
-  "repository": "timout13/oc-modal-library",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/timout13/oc-modal-library.git"
+  },
   "main": "dist/index.js",
   "module": "dist/index.modern.js",
   "source": "src/index.js",
@@ -49,5 +52,16 @@
   },
   "files": [
     "dist"
-  ]
+  ],
+  "directories": {
+    "example": "example"
+  },
+  "keywords": [
+    "react",
+    "modal"
+  ],
+  "bugs": {
+    "url": "https://github.com/timout13/oc-modal-library/issues"
+  },
+  "homepage": "https://github.com/timout13/oc-modal-library#readme"
 }
